# pytsterrors

./: LICENSE  README.md  pyproject.toml
src/examples/error_challenge/: main.py
src/examples/example1/: main.py
src/examples/example2/: main.py
src/examples/example3/: main.py
src/examples/simple/: main.py
src/examples/to_json/: main.py
src/examples/use_decorator/: main.py
src/pytsterrors/: __init__.py  __init__.pyi  exception.py  exception.pyi  utils.py  utils.pyi
tests/: test_tst_error.py  test_tst_error_decorator.py
