[project]
name = "pytsterrors"
version = "0.4.1"
description = "pytsterrors contains an exception that helps to validate trace calls"
authors = [
    {name = "Manos Ragiadakos"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
